--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 
-domain: machinetranslate.org
-url: https://machinetranslate.org
+domain: luisbarrueco.github.io
+url: https://luisbarrueco.github.io
 title: Machine Translate
 description: Open resources and community for machine translation
 
@@ -133,7 +133,7 @@ defaults:
 
 # Just the Docs
 
-remote_theme: pmarsceill/just-the-docs@v0.3.3
+remote_theme: pmarsceill/just-the-docs@v0.4.0.rc1
 
 logo: favicon.ico
 color_scheme: swissred
