--- a/.github/workflows/html-proofer.yaml
+++ b/.github/workflows/html-proofer.yaml
@@ -18,8 +18,5 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
-          bundle exec htmlproofer --assume-extension .html --disable-external=true \
-            --enforce-https=false _site/ || echo "HTMLProofer failed"
-          echo $NUMBER
-        env:
-          NUMBER: ${{ github.event.issue.number }}
+          bundle exec htmlproofer --disable-external=true \
+            --enforce-https=false _site/
