--- a/.github/workflows/html-proofer.yaml
+++ b/.github/workflows/html-proofer.yaml
@@ -14,8 +14,9 @@ jobs:
         with:
           ruby-version: '2.7.4' # To use version matching the one of actions/jekyll-build-pages@v1.0.5
           bundler-cache: true
+      - uses: actions/jekyll-build-pages@v1.0.5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
-          bundle exec jekyll build
-      - run: |
-          bundle exec htmlproofer --checks Links --disable-external=true \
+          bundle exec htmlproofer --disable-external=true \
             --enforce-https=false _site/
